--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,34 @@
+###————————————————————#
+## SHARED             ##
+#————————————————————###
+# modify these to change for the whole team
+
+# Server
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
+
+# Secrets
 ADMIN_JWT_SECRET=tobemodified
+API_TOKEN_SALT=tobemodified
+APP_KEYS="toBeModified1,toBeModified2"
 TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
 ENCRYPTION_KEY=tobemodified
+
+# Database
+DATABASE_CLIENT=sqlite
+DATABASE_FILENAME=.tmp/data.db
+DATABASE_HOST=
+DATABASE_NAME=
+DATABASE_PASSWORD=
+DATABASE_PORT=
+DATABASE_SSL=false
+DATABASE_USERNAME=
+JWT_SECRET=tobemodified
+
+# Domains
+ALLOWED_HOST=pasca-strapi-railway-development.up.railway.app
+
+###————————————————————#
+## LOCAL              ##
+#————————————————————###
+# modify these to change for yourself
