friendship ended with railway, now strapi cloud is my best friend

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ PORT=1337
 ADMIN_JWT_SECRET=tobemodified
 API_TOKEN_SALT=tobemodified
 APP_KEYS="toBeModified1,toBeModified2"
-TRANSFER_TOKEN_SALT=tobemodified
 ENCRYPTION_KEY=tobemodified
+TRANSFER_TOKEN_SALT=tobemodified
 
 # Database
 DATABASE_CLIENT=sqlite
@@ -26,7 +26,10 @@ DATABASE_USERNAME=
 JWT_SECRET=tobemodified
 
 # Domains
-ALLOWED_HOST=pasca-strapi-railway-development.up.railway.app
+ALLOWED_HOST=https://superb-canvas-e9f287e8f1.strapiapp.com
+
+# Strapi (https://docs.strapi.io/cms/configurations/environment)
+STRAPI_TELEMETRY_DISABLED=true
 
 ###————————————————————#
 ## LOCAL              ##
