--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ public/uploads/*
 !public/uploads/.gitkeep
 .tsbuildinfo
 .eslintcache
+public/openapi.json
 
 ############################
 # Node.js
