--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deploy": "strapi deploy",
     "dev": "strapi develop",
     "develop": "strapi develop",
-    "openapi": "strapi openapi generate --output ./public/openapi.json",
+    "_openapi": "strapi openapi generate --output ./public/openapi.json",
+    "openapi": "cp ./src/extensions/documentation/documentation/1.0.0/full_documentation.json ./public/documentation/openapi.json",
     "seed:example": "node ./scripts/seed.js",
     "start": "strapi start",
     "strapi": "strapi",
@@ -17,7 +18,9 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^6.0.3",
     "@strapi/plugin-cloud": "5.23.6",
+    "@strapi/plugin-documentation": "^5.27.0",
     "@strapi/plugin-users-permissions": "5.23.6",
     "@strapi/strapi": "5.23.6",
     "better-sqlite3": "11.3.0",
