chore: update strapi to 5.27

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "deploy": "strapi deploy",
     "dev": "strapi develop",
     "develop": "strapi develop",
-    "_openapi": "strapi openapi generate --output ./public/openapi.json",
     "openapi": "cp ./src/extensions/documentation/documentation/1.0.0/full_documentation.json ./public/documentation/openapi.json",
     "seed:example": "node ./scripts/seed.js",
     "start": "strapi start",
@@ -19,10 +18,10 @@
   },
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^6.0.3",
-    "@strapi/plugin-cloud": "5.23.6",
+    "@strapi/plugin-cloud": "5.27.0",
     "@strapi/plugin-documentation": "^5.27.0",
-    "@strapi/plugin-users-permissions": "5.23.6",
-    "@strapi/strapi": "5.23.6",
+    "@strapi/plugin-users-permissions": "5.27.0",
+    "@strapi/strapi": "^5.27.0",
     "better-sqlite3": "11.3.0",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
